Remove unused variables, redundant comments, and simplify code structure across multiple classes.